--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -66,7 +66,7 @@
                     </li>
                 </ul>
             </section>
-            <div class=" my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
+            <div class="my-12 h-12 w-[200px] m-auto cursor-pointer flex items-center justify-center group md:w-[250px] md:h-[70px] button_style" id="card-booking"><a href="{{ path('reservation') }}" class="font-secondary group-hover:text-secondary duration-150 text-lg">Réservez maintenant !</a></div>
         </div>
         {% endblock %}
     </main>
