--- a/templates/Client/profil_down/templates.html.twig
+++ b/templates/Client/profil_down/templates.html.twig
@@ -58,7 +58,7 @@
 			{% endif %}
 			<ul class="templates">
 				{% for template in templates %}
-					<li class="after after:bg-secondary/50 relative after:w-11/12 flex flex-col gap-2">
+					<li class="after after:bg-secondary/50 relative flex flex-col gap-2">
 						<form onSubmit="setTemplate(event)" method="post" class="bg-400/20 w-11/12 mx-auto max-w-[598px] flex flex-col justify-center p-2 md:p-4 text-secondary" data-id="{{ template.id }}">
 							<div class="get_sticky top-0 relative flex md:gap-4 gap-2">
 								<div class="flex sm-600:flex-row flex-col gap-2 flex-1">
