--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             <p class="text-center my-7 leading-8 md:max-w-[810px] md:mx-auto md:mb-12 text-lg" >À coeur de travailler avec les <span class="text-lg">produits</span> et <span class="text-lg">producteurs</span> de la région, le <span class="text-lg">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg">unique</span> !</p>
-            <div class="bg-secondary mb-7 drop-shadow-lg text-primary h-12 w-40 relative left-1/2 -translate-x-1/2 hover:bg-400 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-lg lg:text-xl group-hover:text-secondary duration-150 ">Réserver</a></div>
+            <div class="button_style mb-7 h-12 w-40 relative left-1/2 -translate-x-1/2 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-lg group-hover:text-secondary duration-150">Réserver</a></div>
         </section>
     </main> 
 {% endblock %}
