--- a/templates/Login/login.html.twig
+++ b/templates/Login/login.html.twig
@@ -10,7 +10,7 @@
                 {% endblock %}
             </div>
         </section>
-        <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] reservation_container login_image relative"></div>
+        <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container login_image relative"></div>
     </main>
     
 {% endblock %}
