--- a/templates/Card/Main/main.card.html.twig
+++ b/templates/Card/Main/main.card.html.twig
@@ -15,7 +15,7 @@
                         <li>
                             <div>
                                 <h3>{{ food.title }}</h3>
-                                <p class="comment" >{{ food.description}}</p>
+                                <p class="" >{{ food.description}}</p>
                             </div>
                             <p class="price">{{ food.price|number_format(2, '.', ',') }}</p>
                         </li>
@@ -23,7 +23,7 @@
                 </ul>
         </fieldset>
     </section>
-    <div class="my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
+    <div class="my-12 h-12 w-[200px] m-auto cursor-pointer flex items-center justify-center group md:w-[250px] md:h-[70px] button_style" id="card-booking"><a href="{{ path('reservation') }}" class="font-secondary group-hover:text-secondary duration-150 text-lg">Réservez maintenant !</a></div>
     <a href="{{ path('card') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à la sélection</a>
 </div>
 {% endblock %}
