--- a/templates/Card/Menus/menus.card.html.twig
+++ b/templates/Card/Menus/menus.card.html.twig
@@ -19,9 +19,9 @@
                                     <div>
                                         <h4 class="text-lg font-secondary">{{ offer.title }}</h4>
                                         <small class="">{{ offer.conditions }}</small>
-                                        <ol class="list-disc list-inside ">
+                                        <ol class="list-disc list-inside" id="description">
                                         {% for description in offer.description %}
-                                            <li class="comment">{{ description }}</li>
+                                            <li class="description">{{ description }}</li>
                                         {% endfor %}
                                         </ol>
                                     </div>
@@ -33,7 +33,7 @@
                     {% endfor %}
                 </ul>
         </fieldset>
-        <div class="my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
+        <div class="my-12 h-12 w-[200px] m-auto cursor-pointer flex items-center justify-center group md:w-[250px] md:h-[70px] button_style" id="card-booking"><a href="{{ path('reservation') }}" class="font-secondary group-hover:text-secondary duration-150 text-lg">Réservez maintenant !</a></div>
         <a href="{{ path('card') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à la sélection</a>
     </section> 
 </div>
