--- a/templates/Client/profil.html.twig
+++ b/templates/Client/profil.html.twig
@@ -21,7 +21,7 @@
                 <div class="grid py-4 gap-2 drop-shadow-lg">
                     <form class="form_profil" method="POST">
                         <label for="email" class="hidden md:block">Email :</label>
-                        <div class="form_inputContainer input_profil">
+                        <div class="form_profilContainer bg-400/20 input_profil">
                             <i class="fa-solid fa-at form_icon"></i>
                             <input class="input_whitePlaceholder" type="email" name="email" id="email" placeholder={{ app.user.email }} required minlength=5 maxlength=80 value={{ last_email }}>
                             <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
@@ -29,7 +29,7 @@
                     </form>
                     <form class="form_profil gap-y-2 items-center" method="POST">
                         <label for="password" class="hidden md:block">Mot de passe :</label>
-                        <div class="form_inputContainer input_profil relative">
+                        <div class="form_profilContainer bg-400/20 input_profil relative">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" onfocusout="removeRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                             <span role="button" onclick="togglePassword(event)">
@@ -45,7 +45,7 @@
                             </small>
                         </div>
                         <label for="valid_password" class="hide change_password hidden_label">Valider le mot de passe :</label>
-                        <div class="hide form_inputContainer input_profil hide change_password relative">
+                        <div class="hide form_profilContainer bg-400/20 input_profil hide change_password relative">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="valid_password" id="valid_password" placeholder="Nouveau mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre." required>
                             <span role="button" onclick="togglePassword(event)">
@@ -55,7 +55,7 @@
                             <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_validPassword"></small>
                         </div>
                         <label for="old_password" class="hide change_password hidden_label">Ancien mot de passe :</label>
-                        <div class="hide form_inputContainer input_profil hide change_password relative">
+                        <div class="hide form_profilContainer bg-400/20 input_profil hide change_password relative">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="old_password" id="old_password" placeholder="Ancien mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                             <span role="button" onclick="togglePassword(event)">
