--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -2,23 +2,16 @@
 
 {% block content %}
 <h1 class="title_section">Connexion</h1>
-{# {% if error %}
-    <div class="error_container text-sm">{{ error }}</div>
-{% endif %}
-{% if success %}
-    <div class="success_container text-sm">{{ success }}</div>
-{% endif %} #}
-{# {% if ((login == 1) or (login == 2)) %} 
-    <div class="reset_password_success">
+{% if ((login == 1) or (login == 2)) %} 
+    <div class="success_container">
         {% if (login == 1) %}
             <p>Mot de passe modifié avec succès !</p>
         {% elseif (login == 2) %}
             <p>Votre compte a bien été validé.</p>
             <p>Vous pouvez dès à présent vous connecter !</p>
         {% endif %}
-        <button class=" bg-secondary text-primary mt-4 rounded-full w-9 h-9 flex justify-center items-center justify-self-center hover:bg-400 duration-150 hover:text-secondary mx-auto" id="reset_success" onclick="closeResetPassword(event)"><i class="fa-solid fa-check"></i></button>
     </div> 
-{% endif %} #}
+{% endif %}
 {% if error %}
     <div class="error_container text-sm">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
@@ -51,7 +44,7 @@
     <button type="submit" class=" bg-secondary text-primary mt-4 mb-2 py-2 px-4 w-fit justify-self-center hover:bg-400 duration-150 hover:text-secondary">Se connecter</button>
 </form>
 <div class="max-w-[589px] mt-8 py-4 text-center w-11/12 mx-auto lg:w-5/6 font-secondary border border-solid border-400 text-secondary">
-    <p class="text-lg font-primary">Pas de compte ? </p>
+    <p class="text-lg font-primary mb-4">Pas de compte ? </p>
     <a href="{{ path ('sign_up') }}" class="text-center w-11/12 mx-auto underline underline-offset-2 duration-150">Créez-en un !</a>
 </div>
     
