--- a/templates/SignUp/validate/signUp.validate.html.twig
+++ b/templates/SignUp/validate/signUp.validate.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 <section class="min-h-[calc(100vh-300px)] flex flex-col lg:text-lg font-secondary justify-center items-center gap-12">
-    <div class="bg-500 drop-shadow-lg w-11/12 max-w-[500px] p-6 text-secondary text-center md:text-lg">
+    <div class="text-center text-secondary max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 p-3">
         <form class="flex flex-col gap-12">
             <label for="code">Pour valider votre compte vous devez renseigner le code qui vous a été envoyé par mail.</label>
-            <input type="text" name="code" id="code" required class="md:text-xl bg-400/20 w-11/12 md:w-5/6 h-8 mx-auto tracking-code text-center">
+            <input placeholder="1 2 3 4 5 6" type="text" name="code" id="code" required class="md:text-xl form_input w-11/12 md:w-5/6 h-8 mx-auto tracking-code text-center">
             <button class="bg-secondary py-3 px-5 group hover:bg-400 duration-150 drop-shadow-lg w-fit text-primary hover:text-secondary mx-auto" type="submit">Valider</button>
         </form>
 </section>
