--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -9,7 +9,7 @@
 {% block content %}
 <h1 class="title_section">Réinitialiser le mot de passe</h1>
     {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger error_container" role="alert">{{ flash_error }}</div>
+        <div class="error_container text-sm" role="alert">{{ flash_error }}</div>
     {% endfor %}
     {{ form_start(requestForm, {'attr' : { 'class' : 'text-secondary max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 p-3 flex flex-col gap-2'}}) }}
         <div class="label-lg">
