--- a/templates/Client/profil.html.twig
+++ b/templates/Client/profil.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Profil{% endblock %}
 
 {% block body %}
-<main class="pt-24 flex flex-col justify-evenly from_main">
+<main class="min_main pt-24 flex flex-col justify-evenly from_main">
     {% if error %}
         <div class="error_container">{{ error }}</div>
     {% endif %}
