--- a/templates/Contact/contact.html.twig
+++ b/templates/Contact/contact.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<main class="pt-24 flex justify-evenly">
+	<main class="min_main pt-24 flex justify-evenly">
 		<div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container contact_image relative"></div>
 		<section class="w-full lg:w-[45%] mb-16">
 			<div class="w-full mx-auto relative top-1/2 -translate-y-1/2">
