--- a/templates/Login/login.html.twig
+++ b/templates/Login/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <main class="pt-24 flex justify-evenly form_main" id="login">
+    <main class="pt-24 flex justify-evenly min_main" id="login">
         <section class="w-full lg:w-[45%] mb-16 ">
             <div class="w-full mx-auto relative flex flex-col top-1/2 -translate-y-1/2">
                 {% block content %}
