--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Inscription{% endblock %}
 
 {% block body %}
-    <main class="pt-24 flex justify-evenly" id="sign-up">
+    <main class="min_main pt-24 flex justify-evenly" id="sign-up">
         <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container signUp_image relative"></div>
         <section class="w-full lg:w-[45%] mb-16 ">
             <div class="w-full mx-auto relative flex flex-col top-1/2 -translate-y-1/2">
