--- a/templates/Admin/profil.html.twig
+++ b/templates/Admin/profil.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<main class="pt-24 flex flex-col justify-evenly form_main">
+	<main class="pt-24 flex flex-col justify-evenly min_main">
 		{% if error %}
 			<div class="error_container">{{ error }}</div>
 		{% endif %}
