--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -4,7 +4,7 @@
 
 
 {% block body %}
-    <main class="w-full">
+    <main class="min_main w-full">
         <section class="min-h-screen h-full w-full">
             <div class="home_image absolute filter blur-sm md:blur-md h-full w-full -z-10">
             </div>
