--- a/templates/Reservation/reservation.html.twig
+++ b/templates/Reservation/reservation.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Réservation{% endblock %}
 
 {% block body %}
-    <main class="pt-24 flex justify-evenly text-secondary">
+    <main class="min_main pt-24 flex justify-evenly text-secondary">
         {% block reservation %}
         {% endblock %}
     </main>
